# CLiFF-LHMP

./: LICENSE  README.md  atc_results.csv  evaluation.py  main.py  plot_figures.py  pyproject.toml  results.csv  thor1_results.csv  thor3_results.csv  trajectory_predictor.py  utils.py
MoDs/atc/: atc-20121024-cliff.csv
MoDs/thor1/: thor1_cliff.csv
MoDs/thor3/: thor3_cliff.csv
dataset/thor1/: exp-1-run-2.csv
dataset/thor3/: exp-3-run-2.csv
