[tool.poetry]
name = "constant-velocity-cliff"
version = "0.1.0"
description = ""
authors = ["yufei <yufei.zhu@oru.se>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.1"
tqdm = "^4.64.0"
pandas = "^1.4.2"
scipy = "^1.8.1"
pgm-reader = "0.0.1"
opencv-python = "^4.6.0.66"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
